# type-safe-printf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  good.cpp  runtest.cpp  test.cpp  tsprintf.hpp  tsprintf.pro
.github/workflows/: build.yml
